# fd-shifts

./: .dprint.json  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  README.md  REFACTORING.md  analysis.py  config.yaml  default_args.py  environment.yaml  environment.yml  example.env  exec.py  exec_pl.py  fix_openset_holdout_classes.py  gather_tests.py  kill_jobs.py  log.txt  playground.py  pyproject.toml  requirements.txt  setup.cfg  tables.tex
.github/workflows/: pytest.yml
docs/: datasets.md  extending_fd-shifts.ipynb
docs/publications/: augrc_2024.md  iclr_2023.md  miccai_2023.md  neurips_2024.md
fd_shifts/: __init__.py  analysis.py  cli.py  exec.py  main.py  version.py
fd_shifts/analysis/: __init__.py  bootstrap.py  confid_scores.py  eval_utils.py  metrics.py  rc_stats.py  rc_stats_utils.py  studies.py
fd_shifts/configs/: __init__.py  config.yaml  iterable_mixin.py
fd_shifts/configs/data/: breeds_384_data.yaml  breeds_data.yaml  breeds_ood_test_384_data.yaml  breeds_ood_test_data.yaml  chestMIMC_data.yaml  cifar100_384_data.yaml  cifar100_data.yaml  cifar10_384_data.yaml  cifar10_data.yaml  corrupt_cifar100_384_data.yaml  corrupt_cifar100_data.yaml  corrupt_cifar10_384_data.yaml  corrupt_cifar10_data.yaml  dermoscopyall_data.yaml  dermoscopyallbarcelona_data.yaml  dermoscopyallbutbarcelona_data.yaml  dermoscopyallbutd7p_data.yaml  dermoscopyallbutmskcc_data.yaml  dermoscopyallbutpascal_data.yaml  dermoscopyallbutph2_data.yaml  dermoscopyallbutqueensland_data.yaml  dermoscopyallbutvienna_data.yaml  dermoscopyallcorrbrhigh_data.yaml  dermoscopyallcorrbrhighhigh_data.yaml  dermoscopyallcorrbrlow_data.yaml  dermoscopyallcorrbrlowlow_data.yaml  dermoscopyallcorrelastichigh_data.yaml  dermoscopyallcorrelastichighhigh_data.yaml  dermoscopyallcorrgaunoihigh_data.yaml  dermoscopyallcorrgaunoihighhigh_data.yaml  dermoscopyallcorrgaunoilow_data.yaml  dermoscopyallcorrgaunoilowlow_data.yaml  dermoscopyallcorrmotblrhigh_data.yaml  dermoscopyallcorrmotblrhighhigh_data.yaml  dermoscopyalld7p_data .yaml  dermoscopyallham10000_data.yaml  dermoscopyallham10000multi_data.yaml  dermoscopyallham10000subbig_data.yaml  dermoscopyallham10000subsmall_data.yaml  (+104 more)
fd_shifts/data/: svhn.py
fd_shifts/experiments/: __init__.py  cluster.py  configs.py  launcher.py  publications.py  sync.py  tracker.py  validation.py
fd_shifts/loaders/: abstract_loader.py  data_loader.py  dataset_collection.py  prepare.py
fd_shifts/models/: __init__.py  clip_model.py  confidnet_model.py  confidnet_model_mod.py  cross_entropy.py  cross_entropy_maha.py  det_mcd_model.py  devries_model.py  devries_model_mod.py  isic_model.py  vit_model.py  zhang_model.py
fd_shifts/reporting/: __init__.py  __main__.py  plots.py  plots_bootstrap.py  precision_study.py  report_bootstrap.py  tables.py
fd_shifts/tests/: __init__.py  pytest.ini  test_analysis.py  test_baurc.py  test_config.py  test_datasets.py  test_experiment_integration.py  test_models.py  test_register_model.py  test_reporting.py  test_reproducible.py  utils.py
fd_shifts/utils/: __init__.py  aug_utils.py  eval_utils.py  exp_utils.py
launcher/: __init__.py  animals_check_sweep.py  animals_vit_study.py  breeds_confid_study.py  breeds_paper_sweep.py  camelyon_paper_sweep.py  camelyon_vit_study.py  camelyon_vit_study_test.py  cifar100_paper_sweep.py  cifar100_vit_study.py  cifar10_paper_sweep.py  cifar_confid_study.py  cifar_vit_study.py  cifar_vit_study_test.py  devries_study.py  dg_study.py  emnist_hp_sweep.py  emnist_hp_sweep_local.py  exp_launcher.py  exp_launcher_confid_svhn.py  gobackseb_sweep.py  isic_win_remote_train.py  local_dermoscopy_confidnet.py  local_dermoscopy_devries.py  local_dermoscopy_lr_tune.py  local_hp_tune_medshifts.py  local_model_prototyping.py  local_submission_medshifts.py  local_train.py  local_xray_chest_devries.py  med_mnist_hp_sweep.py  mnist_confid_study.py  remote_train.py  supercifar_paper_sweep.py  svhn_paper_sweep.py  svhn_zhang_study.py  tcp_cifar_sweep.py  ultimate_cifar_sweep.py  vit_paper_sweep.py  wilds_animals_paper_sweep.py
loaders/: __init__.py  abstract_loader.py  old_loader.py  svhn_loader.py
models/: __init__.py  small_conv.py  small_conv_pl.py
notebooks/: _present_results_clevr_pos.ipynb  analysis.ipynb  analysis_repro_mcp_mcd.ipynb  backbone_sweep_analysis.ipynb  cifar_paper_analysis.ipynb  devries_sweep_analysis.ipynb  dg_analysis.ipynb  dropout_ms_sweep.ipynb  final_results.ipynb  final_results.py  fix_ultimate_cifar_sweep.ipynb  goback_devries_sweep.ipynb  gobackseb_sweep.ipynb  multistep_analysis.ipynb  playground.ipynb  present_results_clevr_pos.ipynb  present_results_trajectories.ipynb  tcp_decision_sweep.ipynb  tcp_sweep.ipynb  ultimate_cifar_sweep.ipynb
scripts/: __init__.py  analysis_bootstrap.py  analyze_me_pe.ipynb  analyze_me_pe.py  analyze_msr_pe.ipynb  analyze_msr_pe.py  do_analysis.py  fix_openset_holdout_classes.py  gather_tests.py  gather_tests_base.py  generate_pip_deps_from_conda.py  investigate_pe_msr.py  kill_jobs.py  list_vit_runs.py  marry_16_and_64.py  mcd_acc_drop.ipynb  merge_32_64.py  merge_32_validation.py  patch_configs.py  playground.py  run_cnn_inference.py  submit_command.py  testing_balanced_aurc.ipynb  to_standardized_name.py
scripts/launcher/: breeds_confid_study.py  breeds_paper_sweep.py  cifar_confid_study.py  dg_study.py  inference_exp_launcher.py  supercifar_paper_sweep.py  svhn_confid_study.py  svhn_paper_sweep.py  svhn_zhang_study.py  tcp_cifar_sweep.py  ultimate_cifar_sweep.py  wildsanimals_confid_study.py
src/configs/: config.yaml
src/loaders/: __init__.py  abstract_loader.py  cifar100_loader.py  cifar10_loader.py  dataset_collection.py  mnist_loader.py  svhn_loader.py
src/models/: __init__.py  confidnet_model.py  default_classifier.py  det_mcd_model.py  devries_model.py  small_conv.py  vit_model.py  zhang_model.py
src/utils/: aug_utils.py  eval_utils.py  exp_utils.py  model_utils.py
tests/: test_analysis.py
utils/: aug_utils.py  eval_utils.py  exp_utils.py  job_surveillance.py  metrics.py
(+233 files in other folders)
