[metadata]
name = fd_shifts
version = 0.0.1

[options]
packages = find:
install_requires =
    imageio==2.9.0
    matplotlib==3.3.4
    numpy==1.22.2
    pandas==1.2.3
    torch==1.8.0
    rich==10.7.0
    scikit-image==0.18.2
    scikit-learn==0.24.2
    scipy==1.6.1
    seaborn==0.11.1
    tensorboard==2.4.1
    timm==0.4.12
    toml==0.10.2
    torchvision==0.9.0
    tqdm==4.62.0
    albumentations==1.0.3
    hydra-colorlog==1.1.0
    hydra-core==1.1.1
    ogb==1.3.1
    omegaconf==2.1.1
    pytorch-lightning-bolts==0.3.2
    pytorch-lightning==1.2.4
    robustness==1.2.1
    torchmetrics==0.2.0
    wilds==1.1.0
    torch-scatter==2.0.9
    typing_extensions==4.1.1

[options.entry_points]
console_scripts =
    fd_shifts = fd_shifts.exec:main

[options.package_data]
* = *.yaml
